added images to attainment 8 t4

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -31,54 +31,55 @@ This data is published by the Department for Education.</p>
 <div class="grid-row question-tabs">
   <ul>
     <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
-    <li id="age-selector"><a href="#age-section"> Household Age </a></li>
-    <li id="nationality-selector"><a href="#nationality-section"> Nationality </a></li>
-    <li id="income-selector"><a href="#income-section"> Income </a></li>
-    <li id="region-selector"><a href="#region-section"> Region </a></li>
+    <li id="gender-selector"><a href="#gender-section"> Gender </a></li>
+    <li id="region-selector"><a href="#region-section">Region </a></li>
+
   </ul>
 </div>
 
 <div class="grid-row graph-section" id="ethnicity-section">
+  <h3 class="heading-medium"> Student GCSE achievement </h3>
   <div class="column-one-half question-graph">
-    <img src="/assets/images/ChartByRace.png" alt="">
+    <img src="/assets/images/attainment8/Chart_1_GCSE_Average_by_Ethnicity.png" alt="">
   </div>
   <div class="column-one-half question-graph">
-    <img src="/assets/images/TableByRace.png" alt="">
-  </div>
-</div>
-
-<div class="grid-row graph-section" id="age-section">
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/ChartByHouseholdAge.png" alt="">
-  </div>
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/TableByHouseholdAge.png" alt="">
+    <img src="/assets/images/attainment8/Table_1_GCSE_Average_by_Ethnicity.png" alt="">
   </div>
 </div>
 
-<div class="grid-row graph-section" id="income-section">
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/ChartByIncome.png" alt="">
+<div class="graph-section" id="gender-section">
+  <h3 class="heading-medium"> Student GCSE achievement by race grouped by gender </h3>
+  <div class="grid-row" >
+    <div class="column-one-half question-graph">
+      <img src="/assets/images/attainment8/Chart_2a_GCSE_Average_Ethnicity_then_Sex.png" alt="">
+    </div>
+    <div class="column-one-half question-graph">
+      <img src="/assets/images/attainment8/Table_2a_GCSE_Average_Ethnicity_then_Sex.png" alt="">
+    </div>
   </div>
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/TableByIncome.png" alt="">
+
+  <h3 class="heading-medium"> Student GCSE achievement by gender grouped by race </h3>
+
+  <div class="grid-row">
+    <div class="column-one-half question-graph">
+      <img src="/assets/images/attainment8/Chart_2b_GCSE_Average_Sex_then_Ethnicity.png" alt="">
+    </div>
+    <div class="column-one-half question-graph">
+      <img src="/assets/images/attainment8/Table_2b_GCSE_Average_Sex_then_Ethnicity.png" alt="">
+    </div>
   </div>
 </div>
 
-<div class="grid-row graph-section" id="nationality-section">
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/ChartByNationality.png" alt="">
-  </div>
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/TableByNationality.png" alt="">
-  </div>
-</div>
 
 <div class="grid-row graph-section" id="region-section">
+  <h3 class="heading-medium"> Student GCSE achievement by race grouped by UK region </h3>
   <div class="column-one-half question-graph">
-    <img src="/assets/images/ChartByRegion.png" alt="">
+    <img src="/assets/images/attainment8/Table_3a_GCSE_Average_Region_then_Ethnicity.png" alt="">
   </div>
   <div class="column-one-half question-graph">
-    <img src="/assets/images/TableByRegion.png" alt="">
+    <img src="/assets/images/attainment8/Chart_3a_GCSE_Average_Region_then_Ethnicity.png" alt="">
   </div>
 </div>
+
+
+
