--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -72,12 +72,12 @@ This data is published by the Department for Education.</p>
 
 
 <div class="grid-row graph-section" id="region-section">
-  <h3 class="heading-medium"> Student GCSE achievement by race grouped by UK region </h3>
+  <h3 class="heading-medium"> Student GCSE achievement by UK region grouped by race  </h3>
   <div class="column-one-half question-graph">
-    <img src="/assets/images/attainment8/Table_3a_GCSE_Average_Region_then_Ethnicity.png" alt="">
+    <img src="/assets/images/attainment8/Chart_3b_GCSE_Average_Ethnicity_then_Region.png" alt="">
   </div>
   <div class="column-one-half question-graph">
-    <img src="/assets/images/attainment8/Chart_3a_GCSE_Average_Region_then_Ethnicity.png" alt="">
+    <img src="/assets/images/attainment8/Chart_3b_GCSE_Average_Ethnicity_then_Region.png" alt="">
   </div>
 </div>
 
