branch with highchart implementation

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -39,37 +39,22 @@ This data is published by the Department for Education.</p>
 
 <div class="grid-row graph-section" id="ethnicity-section">
   <h3 class="heading-medium"> Student GCSE achievement </h3>
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/attainment8/Chart_1_GCSE_Average_by_Ethnicity.png" alt="">
-  </div>
-  <div class="column-one-half question-graph">
+  <div class="column-whole question-graph">
+  <div id="container" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
+</div>
+<!--   <div class="column-one-half question-graph">
     <img src="/assets/images/attainment8/Table_1_GCSE_Average_by_Ethnicity.png" alt="">
-  </div>
+  </div> -->
 </div>
 
 <div class="graph-section" id="gender-section">
   <h3 class="heading-medium"> Student GCSE achievement by race grouped by gender </h3>
   <div class="grid-row" >
-    <div class="column-one-half question-graph">
-      <img src="/assets/images/attainment8/Chart_2a_GCSE_Average_Ethnicity_then_Sex.png" alt="">
-    </div>
-    <div class="column-one-half question-graph">
-      <img src="/assets/images/attainment8/Table_2a_GCSE_Average_Ethnicity_then_Sex.png" alt="">
-    </div>
-  </div>
-
-  <h3 class="heading-medium"> Student GCSE achievement by gender grouped by race </h3>
-
-  <div class="grid-row">
-    <div class="column-one-half question-graph">
-      <img src="/assets/images/attainment8/Chart_2b_GCSE_Average_Sex_then_Ethnicity.png" alt="">
-    </div>
-    <div class="column-one-half question-graph">
-      <img src="/assets/images/attainment8/Table_2b_GCSE_Average_Sex_then_Ethnicity.png" alt="">
+    <div class="column-whole question-graph">
+      <div id="gender-container" style="min-width: 310px; max-width: 800px; height: 500px; margin: 0 auto"></div>
     </div>
   </div>
 </div>
-
 
 <div class="grid-row graph-section" id="region-section">
   <h3 class="heading-medium"> Student GCSE achievement by UK region grouped by race  </h3>
