--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -53,11 +53,8 @@
 
 <div class="grid-row graph-section" id="region-section">
   <h3 class="heading-medium"> Student GCSE achievement by UK region grouped by race  </h3>
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/attainment8/Chart_3b_GCSE_Average_Ethnicity_then_Region.png" alt="">
-  </div>
-  <div class="column-one-half question-graph">
-    <img src="/assets/images/attainment8/Table_3b_GCSE_Average_Ethnicity_then_Region.png" alt="">
+  <div class="column-whole question-graph">
+      <div id="heatmap-container" style="min-width: 310px; max-width: 800px; height: 500px; margin: 0 auto"></div>
   </div>
 </div>
 
