Three chart types including multi series, in depth ethnicities, and heat map

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -35,7 +35,7 @@
 <div class="grid-row graph-section" id="ethnicity-section">
   <h3 class="heading-medium"> Student GCSE achievement </h3>
   <div class="column-whole question-graph">
-  <div id="container" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
+  <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
 </div>
 <!--   <div class="column-one-half question-graph">
     <img src="/assets/images/attainment8/Table_1_GCSE_Average_by_Ethnicity.png" alt="">
@@ -46,7 +46,7 @@
   <h3 class="heading-medium"> Student GCSE achievement by race grouped by gender </h3>
   <div class="grid-row" >
     <div class="column-whole question-graph">
-      <div id="gender-container" style="min-width: 310px; max-width: 800px; height: 500px; margin: 0 auto"></div>
+      <div id="gender-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
     </div>
   </div>
 </div>
@@ -54,7 +54,7 @@
 <div class="grid-row graph-section" id="region-section">
   <h3 class="heading-medium"> Student GCSE achievement by UK region grouped by race  </h3>
   <div class="column-whole question-graph">
-      <div id="heatmap-container" style="min-width: 310px; max-width: 800px; height: 500px; margin: 0 auto"></div>
+      <div id="heatmap-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
   </div>
 </div>
 
