only load js on the attainment page - hacky but will work for now

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -92,5 +92,6 @@ Originally published: <%= @presenter.date %>
   <% end %>
 </div>
 
-
+<!-- Makes it run attainment js, extremely hacky fix this TODO: KASM -->
+<div id="attainment"></div>
 
