--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -47,7 +47,6 @@
   @include grid-column( 1/3 );
 }
 
-
 .race-radios-container {
   border-bottom: 1px solid $grey-2;
 
@@ -137,4 +136,17 @@
       border-bottom: 1px solid $grey-3;
     }
   }
+}
+
+.govuk-metadata {
+  font-size: 14px;
+  line-height: 1.42857;
+  dt {
+    float: left;
+    clear: left;
+    width: auto;
+    min-width: 120px;
+  }
+
+  margin-bottom: 30px;
 }
