--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -26,11 +26,11 @@
 </div>
 
 
-<p class="lede">
+<p>
  Attainment 8 measures the students’ average grades across eight GCSE or equivalent subjects, which must include English and Mathematics.
 </p>
 
-<p class="lede">
+<p>
  Results are calculated from a combination of student grades where A* = 8, A = 7, B = 6, C = 5, and so on. English and Mathematics are double-weighted to prioritise their importance in the national curriculum. Find out more about
 
   <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/583857/Progress_8_school_performance_measure_Jan_17.pdf">how Attainment 8 is measured.</a>
@@ -76,8 +76,22 @@
 <div class="grid-row">
   <div class="column-whole">
   </div>
+
+    <p>Find out <a href= "https://www.ons.gov.uk/ons/guide-method/measuring-equality/equality/measuring-equality--a-guide/ethnic-group-statistics--a-guide-for-the-collection-and-classification-of-ethnicity-data.pdf">how we collect and report on race. </a> </p>
+
     <p>
-      The GCSE and equivalent results continue to vary between different ethnic groups. Within each of these broader ethnic groupings, the minor ethnic groups show further variability.
+      Race categories may be combined if the number of people in one category is very small. For example, Black Caribbean, Black African and Black other may be combined into one category, as "Black".
+    </p>
+
+    <br>
+    <br>
+
+    <p>
+      Girls are ahead of boys and the highest-performing local authority areas for attainment 8 are concentrated in London and the south, while the majority of the lowest-performing areas are in the north and midlands.
+    </p>
+
+    <p>
+      The GCSE and equivalent results continue to vary between different race groups. Within each of these broader race groupings, the minor race groups show further variability:
     </p>
 
     <ul class="list-bullet">
@@ -85,11 +99,9 @@
       <li> Pupils from a black background are the lowest performing group although black pupils are progressing above the national average.</li>
       <li>Pupils from an Asian background are performing above the national average.</li>
       <li>Pupils from a mixed background are also performing above the national level.</li>
-      <li>Within the minor ethnic groupings, Indian pupils are performing well above the national average </li>
+      <li>Within the minor race groupings, Indian pupils are performing well above the national average </li>
       <li>Gypsy/Roma pupils are the lowest performers.</li>
     </ul>
-
-  <br>
   <br>
   <br>
   <p> <a href="http://www.gov.uk">Download data in csv or xls format</a> for all of England or a local authority.</p>
