Free School Meals population pyramid style

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -45,6 +45,7 @@
     <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
     <li id="gender-selector"><a href="#gender-section"> Gender </a></li>
     <li id="region-selector"><a href="#region-section">Region </a></li>
+    <li id="income-selector"><a href="#income-section">Income </a></li>
 
   </ul>
 </div>
@@ -69,6 +70,12 @@
 <div class="grid-row graph-section" id="region-section">
   <div class="column-whole question-graph">
       <div id="heatmap-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
+  </div>
+</div>
+
+<div class="grid-row graph-section" id="income-section">
+  <div class="column-whole question-graph">
+      <div id="fsm-pyramid-container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
   </div>
 </div>
 
