add metadata page

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -113,7 +113,7 @@
   <br>
   <p> <a href="http://www.gov.uk">Download data in csv or xls format</a> for all of England or a local authority.</p>
 
-  <p>Read the <a href="#">further information and guidance </a>about the data in the tables.
+  <p>Read the <a href="/attainment8/metadata">further information and guidance </a>about the data in the tables.
   </p>
 </div>
 
