--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -1,3 +1,4 @@
+
 <div class="breadcrumbs">
   <ol>
     <% @taxonomy_level.breadcrumbs.reverse.each do |crumb| %>
@@ -10,7 +11,7 @@
   </ol>
 </div>
 
-<h1 class="heading-large"> <%=@presenter.title %></h1>
+<h1 class="heading-large"> Average GCSE results (Attainment 8)</h1>
 
 <div class="grid-row">
   <div class="column-whole">
