add contact details

--- a/app/views/taxonomy_level/metadata.html.erb
+++ b/app/views/taxonomy_level/metadata.html.erb
@@ -105,3 +105,18 @@
     </ol>
   </div>
 </div>
+
+<h3 class="heading-medium">
+  Provide feedback or ask a query
+</h3>
+<div class="grid-row">
+  <div class="column-whole">
+    <p>
+     Media queries: Press Office News Desk, Department for Education, Sanctuary Buildings, Great Smith Street, London SW1P 3BT. 020 7783 8300
+    </p>
+
+    <p>
+      All others: Alex Elby, Education Standards, Evidence and Dissemination Division, Department for Education, Sanctuary Buildings, Great Smith Street, London SW1P 3BT. 0207 7838997   attainment.characteristics@education.gsi.gov.uk
+    </p>
+  </div>
+</div>
