--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,9 +1,25 @@
 // Place all the styles related to the homepage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'colours';
 
 .question-graph {
   img { width: 80%; }
+}
+
+#homepage-navigation-tabs {
+    list-style: "none";
+
+    span {
+      float: "left";
+      color: $link-colour;
+      text-decoration: underline;
+    }
+
+    .selected {
+      color:$black;
+      text-decoration: none;
+    }
 }
 
 .graph-section {
