--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -13,24 +13,38 @@
     </p>
 
     <p>
-      You can use this data to learn more about how government works, carry out research or build applications and services. Where possible, other influences such as location, age, socioeconomic status and gender are also provided.
+      Over time, more information will be collected and reported here.
     </p>
   </div>
 </div>
 
 <div class="grid-row">
   <div class="column-whole">
-    <h2 class= "heading-medium"> Select a Race </h2>
+    <p> You can browse all of the available data, or you can search for something more specific, using the keyword search or filters. </p>
+
+    <div id="homepage-navigation-tabs">
+      <h3 class="heading-medium">
+        <span id="#<%= HomepageController::TOPIC %>-selector">
+          Topic
+        </span>
+        |
+        <span id="#<%= HomepageController::RACE %>-selector">
+           Race
+        </span>
+        |
+        <span id="#<%=HomepageController::LOCATION %>-selector">
+          Location
+        </span>
+      </h3>
+    </div>
   </div>
 </div>
 
 <div class="grid-row race-radios-container">
   <div class="column-whole">
-    <form class="form-group">
-
+    <%= form_tag(class: "form-group", action:"navigation_form", method: "POST") do %>
       <fieldset>
-
-        <legend class="visually-hidden">Where do you live?</legend>
+        <input type="hidden" name="filter_type" value="<%= HomepageController::RACE%>">
 
         <label class="block-label selection-button-radio" for="radio-1">
           <input id="radio-1" type="radio" name="radio-group" value="White">
@@ -56,60 +70,39 @@
           <input id="radio-5" type="radio" name="radio-group" value="Other">
           Other
         </label>
-
       </fieldset>
-    </form>
+      <br>
+      <br>
+      <div>
+        <input class="button" type="submit" value="Browse">
+      </div>
+    <% end %>
   </div>
+</div>
+
+<div class="grid-row topic-radios-container">
   <div class="column-whole">
-    <!-- TODO really hacky fix this its not a form its just a link -->
-    <a href="/factoids/black" class="button"> Browse </a>
-    <br>
-    <br>
+    <%= form_tag(class: "form-group", action:"navigation_form", method: "POST") do %>
+      <fieldset>
+        <input type="hidden" name="filter_type" value="<%=HomepageController::TOPIC%>">
+
+        <% TaxonomyLevel.homepage.taxonomy_levels.each_with_index do |topic, index| %>
+          <label class="block-label selection-button-radio" for="radio-<%= index %>">
+            <input id="radio-<%= index %>" type="radio" name="radio-group" value="<%= topic.id %>">
+            <%= topic.display_name %>
+          </label>
+        <% end %>
+      </fieldset>
+      <br>
+      <br>
+      <div>
+        <input class="button" type="submit" value="Browse">
+      </div>
+    <% end %>
   </div>
 </div>
 
-<div class="grid-row">
-  <div class="column-whole">
-    <h2 class= "heading-medium"> Browse by Topic</h2>
-  </div>
-</div>
-<div class="grid-row">
+<div class="grid-row location-radios-container">
 
-
-  <div class = "column-third">
-    <ul class="list list-bullet">
-
-        <li><a href = "/education">Education</a></li>
-        <p>Admissions, grades, opportunities, exclusions and student progress</p>
-
-        <li><a href="/work">Work</a></li>
-        <p> Employment, working conditions, pay, workplace discrimination, business support, benefits</p>
-    </ul>
-  </div>
-
-  <div class = "column-third">
-    <ul class="list list-bullet">
-
-        <li><a href = "/housing%20%26%20living%20standards">Housing and Living Standards</a></li>
-        <p> Ownership, renting, social housing, homelessness, living conditions, poverty</p>
-
-
-        <li><a href="/health%20%26%20social%20care">Health and social care</a></li>
-        <p> Physical and mental health, preventing illness, quality of care, access to treatment</p>
-
-    </ul>
-  </div>
-
-  <div class = "column-third">
-    <ul class="list list-bullet">
-
-        <li><a href = "/security%20%26%20justice">Security and justice</a></li>
-        <p>Criminal justice system, crimes, police, customs, defence</p>
-
-        <li><a href="/<%= URI::escape("participation, representation & private life")%>">Participation, representation and private life</a></li>
-        <p> Culture, media, communities, environment, civic action, wellbeing  </p>
-
-    </ul>
-  </div>
 </div>
 
