--- a/app/views/taxonomy_level/topics_filtered.html.erb
+++ b/app/views/taxonomy_level/topics_filtered.html.erb
@@ -12,33 +12,18 @@
 <div class = "grid-row">
   <div class = "column-third">
     <div>
-      <h3 class="heading-medium">
-        Contents
-      </h3>
+      Select group:
       <ul class="list">
-        <% @topic.taxonomy_levels.each do |level| %>
-          <li> <a href="#"> <%= level.display_name %> </a> </li>
-        <% end %>
+        <li> <a href="white"> White </a></li>
+        <li> <a href="black"> Black </a></li>
+        <li> <a href="asian"> Asian </a></li>
+        <li> <a href="mixed"> Mixed</a></li>
+        <li> <a href="other"> Other </a></li>
       </ul>
     </div>
 
     <div>
-      <h3 class="heading-medium">
-        Compare to the national average
-      </h3>
-      <ul class="list">
-        <li> <a href="<%= @topic.id %>/white"> White </a></li>
-        <li> <a href="<%= @topic.id %>/black"> Black </a></li>
-        <li> <a href="<%= @topic.id %>/asian"> Asian </a></li>
-        <li> <a href="<%= @topic.id %>/mixed"> Mixed</a></li>
-        <li> <a href="<%= @topic.id %>/other"> Other </a></li>
-      </ul>
-    </div>
-
-    <div>
-      <h3 class="heading-medium">
-        Select another Topic
-      </h3>
+      Select another Topic:
       <ul class="list">
         <% TaxonomyLevel.topics.each do |t| %>
           <li> <a href="<%= t.id %>"> <%=t.display_name %> </a></li>
@@ -63,12 +48,16 @@
 
     <div class= "factoid-list">
       <ul class = "list">
-        <% @factoids.measures.each do |f| %>
+        <% @factoids.each do |f| %>
           <div class="row-container <%= f.top_level_parent.name %> ">
             <div class="grid-row">
               <div class="column-whole">
                 <div class="factoid-question">
                   <a href="/<%= f.name %>"><li> <h3 class="heading-medium"><%= f.description %></h3></li></a>
+                </div>
+
+                <div class="factoid-result factoid-header">
+                  <%= @filter.titleize %>
                 </div>
 
                 <div class="factoid-result factoid-header">
@@ -81,6 +70,10 @@
               <div class="column-whole">
                 <div class="row-description" >
                    <%= f.subtitle %>
+                </div>
+
+                <div class="factoid-result">
+                   <%= f.group_average(@filter) %>
                 </div>
 
                 <div class="factoid-result">
