--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -8,18 +8,47 @@
 }
 
 #homepage-navigation-tabs {
-    list-style: "none";
+  padding-bottom: 60px;
+  .tabs-nav {
+    list-style: none;
 
-    span {
-      float: "left";
-      color: $link-colour;
-      text-decoration: underline;
+    li {
+      font-family: "nta", Arial, sans-serif;
+      font-weight: 400;
+      text-transform: none;
+      font-size: 14px;
+      line-height: 1.14286;
+      padding: 0;
+      margin: 0;
+      float: left;
+      width: 33%;
+      border-bottom: 1px solid $grey-2;
+      padding-top: 5px;
+
+      a {
+        font-size: 16px;
+        line-height: 1.25;
+        padding-left: 5px;
+        text-align: center;
+        padding: 0 1em 0 1em;
+        height: 2.25em;
+      }
     }
 
     .selected {
-      color:$black;
-      text-decoration: none;
+      color:red;
+      a {
+        color:$black;
+        text-decoration: none;
+
+      }
+      border: 1px solid $grey-2;
+      border-bottom: 1px solid $white;
+      z-index:5;
     }
+
+  }
+
 }
 
 .graph-section {
