--- a/app/views/taxonomy_level/topics_filtered.html.erb
+++ b/app/views/taxonomy_level/topics_filtered.html.erb
@@ -11,19 +11,34 @@
 
 <div class = "grid-row">
   <div class = "column-third">
-    <div>
-      Select group:
+<div>
+      <h3 class="heading-medium">
+        Contents
+      </h3>
       <ul class="list">
-        <li> <a href="white"> White </a></li>
-        <li> <a href="black"> Black </a></li>
-        <li> <a href="asian"> Asian </a></li>
-        <li> <a href="mixed"> Mixed</a></li>
-        <li> <a href="other"> Other </a></li>
+        <% @topic.taxonomy_levels.each do |level| %>
+          <li> <a href="#<%=level.anchor%>"> <%= level.display_name %> </a> </li>
+        <% end %>
       </ul>
     </div>
 
     <div>
-      Select another Topic:
+      <h3 class="heading-medium">
+        Compare to the national average
+      </h3>
+      <ul class="list">
+        <li> <a href="<%= @topic.id %>/white"> White </a></li>
+        <li> <a href="<%= @topic.id %>/black"> Black </a></li>
+        <li> <a href="<%= @topic.id %>/asian"> Asian </a></li>
+        <li> <a href="<%= @topic.id %>/mixed"> Mixed</a></li>
+        <li> <a href="<%= @topic.id %>/other"> Other </a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h3 class="heading-medium">
+        View a different Topic
+      </h3>
       <ul class="list">
         <% TaxonomyLevel.topics.each do |t| %>
           <li> <a href="<%= t.id %>"> <%=t.display_name %> </a></li>
@@ -40,36 +55,53 @@
         Pupils achieving 5 or more A* - C grades for GCSEs
       </h3>
 
-      <div class="column-whole">
-          <h3 class="heading-large">%56.6</h3>
+      <div class="grid-row">
+        <div class="column-one-half">
+          <h3 class="heading-large">52.6%</h3>
+        </div>
+
+        <div class="column-one-half">
+          <h3 class="heading-large">59.3%</h3>
+        </div>
       </div>
-      <p> National Average </p>
+
+      <div class="grid-row">
+        <div class="column-one-half">
+          <p> Black </p>
+        </div>
+
+        <div class="column-one-half">
+          <p> National Average </p>
+        </div>
+      </div>
     </div>
 
+    <h3 class="heading-medium">
+      <%= @topic.measures.count %> measures available for <%= @topic.display_name %>
+    </h3>
+
     <div class= "factoid-list">
-      <ul class = "list">
-        <% @factoids.each do |f| %>
-          <div class="row-container <%= f.top_level_parent.name %> ">
-            <div class="grid-row">
-              <div class="column-whole">
-                <div class="factoid-question">
-                  <a href="/<%= f.name %>"><li> <h3 class="heading-medium"><%= f.description %></h3></li></a>
-                </div>
-
-                <div class="factoid-result factoid-header">
-                  <%= @filter.titleize %>
-                </div>
-
-                <div class="factoid-result factoid-header">
-                  National Average
-                </div>
-              </div>
+      <% @topic.taxonomy_levels.each do |sub_topic| %>
+        <div class="row-container grid-row" >
+          <div class="column-whole">
+            <div class="factoid-question" >
+              <h3 class="heading-medium" id="<%= sub_topic.anchor %>">
+                <%= sub_topic.display_name %>
+              </h3>
             </div>
 
-            <div class="grid-row">
-              <div class="column-whole">
-                <div class="row-description" >
-                   <%= f.subtitle %>
+            <div class="factoid-result factoid-header">
+              Black
+            </div>
+
+            <div class="factoid-result factoid-header">
+              National Average
+            </div>
+
+            <% sub_topic.measures.each do |f| %>
+              <ul class = "list">
+                <div class="row-description">
+                  <a href="/<%= f.name %>"><li> <%= f.description %></li></a>
                 </div>
 
                 <div class="factoid-result">
@@ -79,12 +111,11 @@
                 <div class="factoid-result">
                    <%= f.national_average %>
                 </div>
-              </div>
-            </div>
-
+              </ul>
+            <% end %>
           </div>
-        <% end %>
-      </ul>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
