--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -104,9 +104,28 @@
 
 <div class="grid-row radios-container" id="location-radios">
   <div class= "column-whole">
-    <h3 class="heading-medium">
-      Navigation not available
-    </h3>
+
+    <p>Explore by area</p>
+
+    <p>
+    Information is collected differently, depending on the organisation and the reason for measuring it. Some of the information we publish on race equality is only available at a national level, and some is available at a more detailed level (e.g. for a local authority, postcode, or for a specific school or prison).
+    </p>
+
+    <p>
+    You can find information and data on race equality for a specific area - where the data is available at that level. If it isn't available, you may need to broaden your search to a larger regional area.
+    </p>
+
+    <div class= "location-search">
+      <label for="search-main">Search by location:
+
+        <input type="search" id="search-main">
+      </label>
+      <button type="submit" class="button"> Search </button>
+    </div>
+    <p>
+    See what data is available at the various levels below:
+    </p>
+    <img src="/assets/images/regions.png">
   </div>
 </div>
 
