--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -41,8 +41,8 @@
 
 
 
-<div class="grid-row question-tabs">
-  <ul>
+<div class="grid-row question-tabs" id="navigation-tabs">
+  <ul class="tabs-nav">
     <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
     <li id="gender-selector"><a href="#gender-section"> Gender </a></li>
     <li id="region-selector"><a href="#region-section">Region </a></li>
