--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -12,7 +12,7 @@ img {
 }
 
 
-#homepage-navigation-tabs {
+#navigation-tabs {
   padding-bottom: 60px;
   .tabs-nav {
     list-style: none;
@@ -59,22 +59,7 @@ img {
 .graph-section {
   display:none;
 }
-.question-tabs {
-  border-bottom: 1px solid #bfc1c3;
-  margin-bottom: 20px;
 
-  ul {
-    list-style: none;
-
-  }
-
-  li {
-    float: left;
-    padding: 0 8px 10px;
-    margin: 0 20px 0 0;
-  }
-
-}
 
 .site-search {
   float:right;
