minor copy change

--- a/app/views/taxonomy_level/topics_filtered.html.erb
+++ b/app/views/taxonomy_level/topics_filtered.html.erb
@@ -67,7 +67,7 @@
 
       <div class="grid-row">
         <div class="column-one-half">
-          <p> Black </p>
+          <p> Black Average </p>
         </div>
 
         <div class="column-one-half">
