--- a/app/views/taxonomy_level/topics.html.erb
+++ b/app/views/taxonomy_level/topics.html.erb
@@ -4,7 +4,7 @@
       Race disparity in the public sector
     </h1>
     <div class=heading-medium>
-      You selected: <%= @topic.display_name%>
+      You selected: <%= @topic.display_name %>
     </div>
   </div>
 </div>
@@ -56,7 +56,7 @@
       </h3>
 
       <div class="column-whole">
-        <h3 class="heading-large">%56.6</h3>
+        <h3 class="heading-large">56.6%</h3>
       </div>
       <p> National Average </p>
     </div>
